tests/snapshots/integration__main_fn__subcmd_main.snap
---
source: tests/main_fn.rs
expression: data
---
RUN
prog

# OUTPUT
argc__args=( prog )
argc__fn=main
argc__positionals=(  )
main

# BUILD_OUTPUT
argc__args=([0]="prog")
argc__fn=main
argc__positionals=()
main
