tests/snapshots/integration__main_fn__with_main.snap
---
source: tests/main_fn.rs
expression: data
---
RUN
prog

OUTPUT
argc__args=( prog )
argc__index=0
argc__positionals=(  )
argc__fn=main
main

